--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "@babel/cli": "^7.24.8",
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-react": "^7.35.0",
+    "html-loader": "^5.1.0",
+    "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
     "react": "^18.3.1",
+    "style-loader": "^4.0.0",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4"
   },
